# ref-solver

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-local.yml  deploy.yml  publish.yml
catalogs/: README.md  build_catalog.sh  build_patches.sh  download_patch_fastas.sh  human_references_hierarchical_sample.json
catalogs/patches/: grch37_v13.json  grch37_v14.json  grch37_v17.json  grch37_v21.json  grch37_v22.json  grch37_v25.json  grch38_v26.json  grch38_v27.json  grch38_v28.json  grch38_v29.json  grch38_v30.json  grch38_v31.json  grch38_v32.json  grch38_v33.json  grch38_v34.json  grch38_v35.json  grch38_v36.json  grch38_v37.json  grch38_v38.json  grch38_v39.json  grch38_v40.json
catalogs/sources/: GCA_000786075.2_hs38d1_assembly_report.txt  GCF_002402265.1_ASM240226v1_assembly_report.txt  GCF_009914755.1_T2T-CHM13v2.0_assembly_report.txt  b37_broad.json  chm13v2.json  grch37_ncbi.json  grch38_1kg_analysis.json  grch38_broad_analysis_set.json  grch38_dragen.json  grch38_dragen_altmasked.json  grch38_gdc.json  grch38_ncbi.json  hg19_ucsc.json  hg38_p12_ucsc.json  hg38_ucsc.json  hs37d5.json  hs38DH.json  manifest.json
deploy/: caddy-setup.sh  lightsail-setup.sh  ref-solver.service
scripts/hooks/: pre-commit
src/: lib.rs  main.rs
src/catalog/: builder.rs  hierarchical.rs  index.rs  mod.rs  store.rs
src/cli/: catalog.rs  compare.rs  identify.rs  mod.rs  score.rs
src/core/: assembly.rs  contig.rs  header.rs  (+3 more)
tests/: dos_tests.rs  header_extraction_tests.rs  security_tests.rs
(+48 files in other folders)
